Deleting unnecessary modules and migrating to junit 5