@@ -1,10 +1,10 @@
 package com.harishkannarao.rest.functional;
 
 import com.harishkannarao.rest.client.ThirdPartyRestQuoteClientImpl;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ThirdPartyRestQuoteClientImplIT extends BaseIntegration {
 
@@ -16,7 +16,7 @@ public class ThirdPartyRestQuoteClientImplIT extends BaseIntegration {
         com.harishkannarao.rest.domain.Quote result = thirdPartyRestQuoteClientImpl.getQuote();
         assertEquals("success", result.getType());
         assertEquals("Working with Spring Boot is like pair-programming with the Spring developers.", result.getValue().getQuote());
-        assertEquals(new Long(1L), result.getValue().getId());
+        assertEquals(Long.valueOf(1L), result.getValue().getId());
     }
 
 }
