@@ -1,9 +1,9 @@
 package com.harishkannarao.rest.functional;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class QuoteControllerIT extends BaseIntegrationWithTestConfiguration {
     @Autowired
@@ -15,6 +15,6 @@ public class QuoteControllerIT extends BaseIntegrationWithTestConfiguration {
         com.harishkannarao.rest.domain.Quote result = restTemplate.getForObject(quoteEndpointUrl, com.harishkannarao.rest.domain.Quote.class);
         assertEquals("success", result.getType());
         assertEquals("Working with Spring Boot is like pair-programming with the Spring developers.", result.getValue().getQuote());
-        assertEquals(new Long(1L), result.getValue().getId());
+        assertEquals(Long.valueOf(1L), result.getValue().getId());
     }
 }
